--- a/mauiBlazor/Pages/CustomTabel.razor
+++ b/mauiBlazor/Pages/CustomTabel.razor
@@ -1,39 +1,38 @@
 ﻿@page "/customtabel"
 
+@using Mapster
 @using Newtonsoft.Json.Linq
 @using mauiBlazor.Data
 @inject WeatherForecastService ForecastService
 @inject CustomerService CustomerService
+@inject DataService DataService
 
-<h3>Custom Tabel Data Customer</h3>
 <p>Custom tabel dengan auto generate header tabel.</p>
-<bzrLibrary.Controls.PthTabel Items="@CustomerService.Customers" OnSelectedItem="@(args => OnDataDipilih(args))"  />
+<pthRazorLibrary.Controls.PthTabel Items="dataKaryawan" OnSelectedItem="@(args => OnDataDipilih(args))"  />
 
 <br />
-
-<h3>Custom Tabel Data Weather Forecast</h3>
 <p>Custom tabel tanpa auto generate header tabel.</p>
-<bzrLibrary.Controls.PthTabel Items="forecasts">
+<pthRazorLibrary.Controls.PthTabel Items="dataKaryawan">
 	<Column>
-		<RadzenDataGridColumn TItem="WeatherForecast" Property="Date" Title="Date">
-			<Template Context="data">
-				@String.Format("{0:d}", data.Date)
-			</Template>
-		</RadzenDataGridColumn>
-		<RadzenDataGridColumn TItem="WeatherForecast" Property="TemperatureF" Title="Temperature (F)"></RadzenDataGridColumn>
-		<RadzenDataGridColumn TItem="WeatherForecast" Property="TemperatureC" Title="Temperature (C)"></RadzenDataGridColumn>
-		<RadzenDataGridColumn TItem="WeatherForecast" Property="Summary" Title="Summary"></RadzenDataGridColumn>
+		<RadzenDataGridColumn TItem="DataKaryawan" Property="NamaLengkap" Title="NamaLengkap"></RadzenDataGridColumn>
+		<RadzenDataGridColumn TItem="DataKaryawan" Property="NamaPanggilan" Title="NamaPanggilan"></RadzenDataGridColumn>
+		<RadzenDataGridColumn TItem="DataKaryawan" Property="Alamat" Title="Alamat"></RadzenDataGridColumn>
 	</Column>
-</bzrLibrary.Controls.PthTabel>
-
+</pthRazorLibrary.Controls.PthTabel>
+<br />
 @code {
 	private Customer _dataDipilih { get; set; }
 	private WeatherForecast[] forecasts;
-	protected override async Task OnInitializedAsync()
-	{
-		forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+	private List<DataKaryawan> dataKaryawan = new List<DataKaryawan>();
 
-	}
+    protected override async Task OnInitializedAsync()
+    {
+		forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        dataKaryawan.Clear();
+		dataKaryawan.Clear();
+		dataKaryawan = await DataService.GetDataKaryawan();
+		this.StateHasChanged();
+    }
 	private void OnDataDipilih(object value)
 	{
 		var json = System.Text.Json.JsonSerializer.Serialize(value);
