--- a/mauiBlazor/Shared/NavMenu.razor
+++ b/mauiBlazor/Shared/NavMenu.razor
@@ -23,6 +23,16 @@
 				<span class="oi oi-list-rich" aria-hidden="true"></span> Custom Tabel
 			</NavLink>
 		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="crudpage">
+				<span class="oi oi-list-rich" aria-hidden="true"></span> CRUD
+			</NavLink>
+		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="fetchdata">
+				<span class="oi oi-list-rich" aria-hidden="true"></span> Fetch Data
+			</NavLink>
+		</div>
 	</nav>
 </div>
 
