--- a/mauiBlazor/Controls/PthRekaptulasi.razor
+++ b/mauiBlazor/Controls/PthRekaptulasi.razor
@@ -1,5 +1,5 @@
 ﻿@typeparam TData
-<RadzenProgressBar Value="1500" ShowValue="false" ProgressBarStyle="ProgressBarStyle.Secondary" Mode="ProgressBarMode.Indeterminate" Visible="@IsLoading" />
+<RadzenProgressBar Value="1500" ShowValue="false" ProgressBarStyle="ProgressBarStyle.Light" Mode="ProgressBarMode.Indeterminate" Visible="@IsLoading" />
 <RadzenSplitter Orientation="Radzen.Orientation.Vertical" Collapse=@OnCollapse Expand=@OnExpand style="height: 900px; border: 0px solid rgba(0,0,0,.08);">
 	<RadzenSplitterPane Size="100px">
 		<RadzenSplitter Collapse=@OnCollapse Expand=@OnExpand>
