--- a/mauiBlazor/Pages/Modal.razor
+++ b/mauiBlazor/Pages/Modal.razor
@@ -1,6 +1,11 @@
 ﻿<h3>Modal</h3>
-
-<mauiBlazor.Controls.PthModal></mauiBlazor.Controls.PthModal>
+<div class="row">
+    <div class="col-lg-6 d-flex">
+        <RadzenCard Style="width: 100%; overflow: hidden;">
+            <p>Halo</p>
+        </RadzenCard>
+    </div>
+</div>
 @code {
 
 }
