--- a/mauiBlazor/Pages/FetchData.razor
+++ b/mauiBlazor/Pages/FetchData.razor
@@ -31,15 +31,15 @@
 <br />
 <br />
 @code {
-    public List<DataKaryawan> dataKaryawan { get; set; } = new List<DataKaryawan>();
-	private DataKaryawan karyawan { get; set; } = new DataKaryawan();
+    public List<uioT1Karyawan> dataKaryawan { get; set; } = new List<uioT1Karyawan>();
+	private uioT1Karyawan karyawan { get; set; } = new uioT1Karyawan();
     protected override async Task OnInitializedAsync()
     {
         dataKaryawan.Clear();
         var data = DataService.GetData();
         await foreach (var item in data)
         {
-            var karyawan = item.Adapt<DataKaryawan>();
+            var karyawan = item.Adapt<uioT1Karyawan>();
             dataKaryawan.Add(karyawan);
             this.StateHasChanged();
         }
